change some design

--- a/FRAProject/appsettings.json
+++ b/FRAProject/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"FRADbConnection": "Data Source=localhost;Initial Catalog=FRADB;Integrated Security=True;"
-    "FRADbConnection": "Server=tcp:rcatayas.database.windows.net,1433;Initial Catalog=FRADB;Persist Security Info=False;User ID=rcatayas;Password=Password10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "FRADbConnection": "Data Source=localhost;Initial Catalog=FRADB;Integrated Security=True;"
+    //"FRADbConnection": "Server=tcp:rcatayas.database.windows.net,1433;Initial Catalog=FRADB;Persist Security Info=False;User ID=rcatayas;Password=Password10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
