added category to links and finish up user module

--- a/FRA.Data/FRA.Data.csproj
+++ b/FRA.Data/FRA.Data.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FRA.IdentityProvider\FRA.IdentityProvider.csproj" />
     <ProjectReference Include="..\FRA.Service\FRA.Service.csproj" />
   </ItemGroup>
 
