added contact person class and file upload, download and delete

--- a/FRA.Service/FRA.Service.csproj
+++ b/FRA.Service/FRA.Service.csproj
@@ -10,4 +10,15 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FTP\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="FluentFTP">
+      <HintPath>FTP\FluentFTP.dll</HintPath>
+      <Private>true</Private>
+    </Reference>
+  </ItemGroup>
+
 </Project>
